sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:13: error: type mismatch;
 found   : Unit
 required: Boolean
		if (x=getNombreValeurs()-1) {
                     ^